--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
 <title>Juan Cortez
-About me
-
-
-<p></I used to play baseball my whole life.>
-<p></I am from Chicago, born and raised here.>
-<p></I used to be in architecture.>
+<p><I used to play baseball my whole life.>
+<p><I am from Chicago, born and raised here.>
+<p><I used to be in architecture.>
