--- a/index.html
+++ b/index.html
@@ -1,4 +1,20 @@
-<title>Juan Cortez
-<p><I used to play baseball my whole life.>
-<p><I am from Chicago, born and raised here.>
-<p><I used to be in architecture.>
+<!DOCTYPE html>
+<html lang="en" id="calender">
+<head> 
+  <meta charset="utf-8" />
+  <title>Juan Cortez
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
+  <link rel="stylesheet" href="css/screen.css" media="screen" />
+  <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+  <!--<script async src="js/site.js"></script>-->
+  <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+  <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+  <script>
+    $( function() {
+      $( "accordion" ).accordion();
+    } );
+  </script>
+</head>
+<body>
+</body>
+</html>
