--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 </head>
 <body>
   <p>&amp; Hello world. This is my first website!</p>
-  <p>Instructions: rewrite this page by adding a few sentences about yourself. Follow the instructions in README.md to turn it in.</p>
+  <p>I used to be an architecture major before switching to Cybersecurity.
+  <p>I am born and raised here in Chicago.
+  <p>My favorite season is the fall.
+  </p>
 </body>
 </html>
