--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Internet Technologies and Web Design</title>
 </head>
 <body>
-  <p>&amp; Hello world. This is my first website!</p>
+  <p>&amp; Hello world. This is my first website!
   <p>I used to be an architecture major before switching to Cybersecurity.
   <p>I am born and raised here in Chicago.
   <p>My favorite season is the fall.
