--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
   <title>Internet Technologies and Web Design</title>
 </head>
 <body>
-  <p>&amp; Hello world. This is my first website!
-  <p>I used to be an architecture major before switching to Cybersecurity.
-  <p>I am born and raised here in Chicago.
-  <p>My favorite season is the fall.
-  </p>
+  <p>I used to be an architecture major before switching to Cybersecurity.</p>
+  <p>I am born and raised here in Chicago.</p>
+  <p>My favorite season is the fall.</p>
 </body>
 </html>
