--- a/index - Copy.html
+++ b/index - Copy.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>Internet Technologies and Web Design</h1>
-  <h3>Semester? Year?</h3>
+  <h3>Fall 2024</h3>
   <p>Juan Cortez, jcortez7@hawk.iit.edu</p>
   <h2>Professor:</h2>
   <p>Daniel Krieglstein</p>
