Update index Day
added day to script

--- a/index - Copy.html
+++ b/index - Copy.html
@@ -11,7 +11,7 @@
   <h2>Professor:</h2>
   <p>Daniel Krieglstein</p>
   <h2>Lecture Days, Time and Place:</h2>
-  <p>Day? 6:25pm to 9:05pm, On Blackboard's Collaborate Ultra</p>
+  <p>Tuesday 6:25pm to 9:05pm, On Blackboard's Collaborate Ultra</p>
   <h2>Course Catalog Description:</h2>
   <p>This course will cover the creation of Web pages and sites using HTML, CSS, Javascript and graphical applications. Networked multimedia distribution technologies are also explored. The design of effective Web site including page layout, user interface design, graphic design, content flow and site structure as well as management of Web site resources including intranet management and design considerations are addressed. Students design and create a major Web site with multiple pages and cross-linked structures. <strong>Prerequisites</strong>: [none] <strong>Credit</strong>: 2-2-3 Semester Hours</p>
   <h2>Course Outcomes:</h2>
