--- a/index.html.html
+++ b/index.html.html
@@ -5,7 +5,7 @@
   <title>Internet Technologies and Web Design</title>
 </head>
 <body>
-  <p>&amp; I used to be an architecture major before switching to Cybersecurity.</p>
+  <p>I used to be an architecture major before switching to Cybersecurity.</p>
   <p>I am born and raised here in Chicago.</p>
   <p>My favorite season is the fall.</p>
 </body>
