Update index lab 1.html
fixed lines

--- a/index lab 1.html
+++ b/index lab 1.html
@@ -6,9 +6,8 @@
 </head>
 <body>
   <p>&amp; Hello world. This is my first website!</p>
-  <p>My name is Juan Cortez and I am from Chicago.
-  <p>I used to play baseball my whole life until my first year in college.
-  <p>I am switchng from arcitecture to cypersecurity 
-  </p>
+  <p>My name is Juan Cortez and I am from Chicago.</p>
+  <p>I used to play baseball my whole life until my first year in college.</p>
+  <p>I am switchng from Arcitecture to Cypersecurity.</p>
 </body>
 </html>
