--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<title>
+  <head>
+    <meta charset="utf-8">
+    <title>Index</title>
+  </head>
+
+  <body>
+    <header>
