--- a/index.html
+++ b/index.html
@@ -7,3 +7,11 @@
 
   <body>
     <header>
+	  <nav>
+	    <ul>
+		  <li><a href="index.hyml">Homepage</a></li> -->
+		  <li><a href="resume.html">Resume</a></li>
+		  <li><a href="chicago_food.html">Chicago Food</a></li>
+		</ul>
+	  </nav>
+	</header>
