--- a/resume.html
+++ b/resume.html
@@ -4,3 +4,14 @@
 	<meta charset="utf-8">
 	<title>Resume</title>
   </head>
+  
+  <body>
+    <header>
+	  <nav>
+	    <ul>
+		  <li><a href="index.hyml">Homepage</a></li> -->
+		  <li><a href="resume.html">Resume</a></li>
+		  <li><a href="chicago_food.html">Chicago Food</a></li>
+		</ul>
+	  </nav>
+	</header>
