--- a/page 3.html
+++ b/page 3.html
@@ -9,9 +9,16 @@
     <header>
 	  <nav>
 	    <ul>
-		  <li><a href="index.hyml">Homepage</a></li> -->
+		  <li><a href="index.hyml">Homepage</a></li>
 		  <li><a href="resume.html">Resume</a></li>
 		  <li><a href="chicago_food.html">Chicago Food</a></li>
 		</ul>
 	  </nav>
 	</header>
+  </body>
+
+    <main>
+	  <h1>Page 3</h1>
+	  <p>hello</p>
+	</main>
+</html>
