--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
   <main>
     <h2>The Train System of Chicago aka The Loop</h2>
+	<img src="images/cta_map.jpg" alt="CTA Map">
+	
     <p>At first some might get confused by the complex train system in Chicago. The trains are labeled by color and ech one has it's own stops. This alone loses people already, but after understannding of so it is brilliant. It can bring people from north, south, east, and west together.</p>
   </main>
 </html>
