--- a/page 3.html
+++ b/page 3.html
@@ -15,10 +15,10 @@
 		</ul>
 	  </nav>
 	</header>
-  </body>
 
     <main>
-	  <h1>Page 3</h1>
+	  <h1>Best food spots in Chicago</h1>
 	  <p>hello</p>
 	</main>
+  </body>
 </html>
