added contxt to each html
added context on my resume and fixed image on the other html

--- a/resume.html
+++ b/resume.html
@@ -15,3 +15,40 @@
 		</ul>
 	  </nav>
 	</header>
+	<h1>Juan C Cortez's Resume</h1>
+	<section id="experience">
+	  <h2>Experience</h2>
+	  <p>Continental Sales "lots-4-less"</p>
+	  <p>Al's Heating and Cooling</p>
+	</section>
+	<section id="education">
+	  <h2>Education, future</h2>
+	  <ol>
+	    <li>High school diploma</li>
+		<li>Bachelors</li>
+	  </ol>
+	</section>
+	<section id="skills">
+	  <h2>Skills</h2>
+	  <ol>
+	    <li>Active Listening</li>
+		<li>Strong Work Ethic</li>
+		<li>Leadership</li>
+		<li>Public Speaking</li>
+	  </ol>
+	</section>
+	<section id="volunteering">
+	  <h2>Volunteering</h2>
+	  <p>
+	    New Life Community Church Midway foodrive
+		01/2024-04/2024
+	  </p>
+	</section>
+	<footer>
+	  <p>Thank you for your time.</p>
+	  <adress>
+	    <p><a  href="jcortez7@hawk.iit.edu">jcortez7@hawk.iit.edu</a></p>
+	  </adress>
+	</flooter>
+  </body>
+</html>
