--- a/resume.html
+++ b/resume.html
@@ -47,7 +47,7 @@
 	<footer>
 	  <p>Thank you for your time.</p>
 	  <adress>
-	    <p><a  href="jcortez7@hawk.iit.edu">jcortez7@hawk.iit.edu</a></p>
+	    <p><a  href="mailto:jcortez7@hawk.iit.edu">jcortez7@hawk.iit.edu</a></p>
 	  </adress>
 	</flooter>
   </body>
