--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
 	    <ul>
 	      <li><a href="index.hyml">Homepage</a></li>
 	      <li><a href="resume.html">Resume</a></li>
-	      <li><a href="chicago_food.html">Chicago Food</a></li>
+	      <li><a href="page_3.html">Chicago Food</a></li>
 	    </ul>
 	  </nav>
 	</header>
