--- a/page 3.html
+++ b/page 3.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Chicago Food</title>
+    <title>Other</title>
   </head>
   
   <body>
