--- a/page 3.html
+++ b/page 3.html
@@ -15,9 +15,10 @@
 	    </ul>
 	  </nav>
 	</header>
+    <h1>Best food spots in Chicago</h1>
   </body>
   
-	<h1>Best food spots in Chicago</h1>
+  <main>
 	<h2>Giordano's pizza</h2>
 	<img src="images/giordanos_pizza.webp" alt="pizza from Giordano" width="500" height="600">
 	<p>The deepdish pizza from Giordano's is timeless. One of the most iconic dishes from Chicago.</p>
@@ -29,4 +30,5 @@
 	<h2>Busy Burger</h2>
 	<img src="images/busyburger.jpg" alt="Burger from Busy Burger"  width="500" height="600">
 	<p>An unknown spot to non-locals which is growing rapidly. The "Original Burger" from Busy Burger draws crowds from UIC all the way to Saint Ignatious.</p>
+  </main>
 </html>
