added image to page 3
added new image to html page 3

--- a/page 3.html
+++ b/page 3.html
@@ -20,7 +20,7 @@
   
   <main>
 	<h2>Giordano's pizza</h2>
-	<img src="images/giordanos_pizza.webp" alt="pizza from Giordano" width="500" height="600">
+	<img src="images/giordanos_pizza.jpg" alt="pizza from Giordano" width="500" height="600">
 	<p>The deepdish pizza from Giordano's is timeless. One of the most iconic dishes from Chicago.</p>
 	  
 	<h2>Ricobene's</h2>
