chnaged name of p3
changed name of p3 in the html

--- a/page 3.html
+++ b/page 3.html
@@ -8,10 +8,11 @@
   <body>
     <header>
 	  <nav>
+		<h1>
 	    <ul>
 	      <li><a href="index.hyml">Homepage</a></li>
 	      <li><a href="resume.html">Resume</a></li>
-	      <li><a href="page_3.html">Chicago Food</a></li>
+	      <li><a href="page_3.html">Other</a></li>
 	    </ul>
 	  </nav>
 	</header>
