--- a/page 3.html
+++ b/page 3.html
@@ -10,7 +10,7 @@
 	  <nav>
 		<h1>
 	    <ul>
-	      <li><a href="index.hyml">Homepage</a></li>
+	      <li><a href="index.html">Homepage</a></li>
 	      <li><a href="resume.html">Resume</a></li>
 	      <li><a href="page_3.html">Other</a></li>
 	    </ul>
