--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
     <header>
 	  <nav>
 	    <ul>
-	      <li><a href="index.hyml">Homepage</a></li>
+	      <li><a href="index.html">Homepage</a></li>
 	      <li><a href="resume.html">Resume</a></li>
 	      <li><a href="page_3.html">Chicago Food</a></li>
 	    </ul>
