--- a/resume.html
+++ b/resume.html
@@ -44,11 +44,11 @@
 		01/2024-04/2024
 	  </p>
 	</section>
-	<footer>
+	<section id="dismisal">
 	  <p>Thank you for your time.</p>
 	  <adress>
 	    <p><a  href="mailto:jcortez7@hawk.iit.edu">jcortez7@hawk.iit.edu</a></p>
 	  </adress>
-	</flooter>
+	</section>
   </body>
 </html>
