--- a/resume.html
+++ b/resume.html
@@ -46,9 +46,9 @@
 	</section>
 	<section id="dismisal">
 	  <p>Thank you for your time.</p>
-	  <adress>
+	  <address>
 	    <p><a  href="mailto:jcortez7@hawk.iit.edu">jcortez7@hawk.iit.edu</a></p>
-	  </adress>
+	  </address>
 	</section>
   </body>
 </html>
