--- a/resume.html
+++ b/resume.html
@@ -45,7 +45,7 @@
 	  </p>
 	</section>
 	<section id="dismisal">
-	  <p>Thank you for your time.</p>
+	  <h2>Thank you for your time.</h2>
 	  <address>
 	    <p><a  href="mailto:jcortez7@hawk.iit.edu">jcortez7@hawk.iit.edu</a></p>
 	  </address>
