--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <h1>Home Page</h1>
     <h2>The Train System of Chicago aka The Loop</h2>
     <img src="images/cta_map.jpg" alt="CTA Map" width="500" height="600">
-    <p>At first some might get confused by the complex train system in Chicago. The trains are labeled by color and ech one has it's own stops. This alone loses people already, but after understannding of so it is brilliant. It can bring people from north, south, east, and west together.</p>
+    <p>At first some might get confused by the complex train system in Chicago. The CTA (Chicago Transit Authority) trains are labeled by color and ech one has it's own stops. This alone confuses people already, but after understannding of so it is brilliant. It can bring people from north, south, east, and west together.</p>
+    <p>During my time spent living here in Chicago I have learned this system like the back of my hand. While attending high school I had to learn since this was my transportation. I would walk to the Orange line at midway then get off on 35th/Archer to then take the 50 bus.</p>
   </body>
 </html>
